--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\MSSQLSERVER01;Database=Gym;Trusted_Connection=True;TrustServerCertificate=True"
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=.\\MSSQLSERVER01;Database=Gym;Trusted_Connection=True;TrustServerCertificate=True"
+  //}
+  {
+    "ConnectionStrings": {
+      "DefaultConnection": "Host=${PGHOST};Port=${PGPORT};Database=${PGDATABASE};Username=${PGUSER};Password=${PGPASSWORD};Ssl Mode=Require;Trust Server Certificate=true"
+    }
   }
+
 }
