--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
   //}
   {
     "ConnectionStrings": {
-      "DefaultConnection": "Host=${PGHOST};Port=${PGPORT};Database=${PGDATABASE};Username=${PGUSER};Password=${PGPASSWORD};Ssl Mode=Require;Trust Server Certificate=true"
+      "DefaultConnection": ""
     }
   }
 
