Solving program.js

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,12 @@
   //"ConnectionStrings": {
   //  "DefaultConnection": "Server=.\\MSSQLSERVER01;Database=Gym;Trusted_Connection=True;TrustServerCertificate=True"
   //}
-    "ConnectionStrings": {
-      "DefaultConnection": ""
-    }
+  //"ConnectionStrings": {
+  //  "DefaultConnection": ""
+  //}
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=crossover.proxy.rlwy.net;Port=46978;Database=Gym-Railway;Username=postgres;Password=nQpgKFhuxxiqOqKyxkcoaFcQdAFdcivW;Ssl Mode=Require;Trust Server Certificate=true"
+  }
+
 
 }
