--- a/backend.csproj
+++ b/backend.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    <PackageReference Include="Resend" Version="0.2.1" />
     <PackageReference Include="swashbuckle.aspnetcore" Version="8.1.0" />
   </ItemGroup>
 
