Solved appsettingss.jspn

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,8 @@
   //}
   "ConnectionStrings": {
     "DefaultConnection": "Host=crossover.proxy.rlwy.net;Port=46978;Database=Gym-Railway;Username=postgres;Password=nQpgKFhuxxiqOqKyxkcoaFcQdAFdcivW;Ssl Mode=Require;Trust Server Certificate=true"
-  }
+  },
+  "RESEND_API_KEY": "re_GwmAMFBV_F9AzGyBZ3M6df7W5dUEMhFfy"
 
 
 }
